--- a/report.ipynb
+++ b/report.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,6 +12,8 @@
     "import seaborn as sns\n",
     "import warnings\n",
     "import sys\n",
+    "from prophet import Prophet\n",
+    "from sklearn.metrics import mean_squared_error, r2_score, mean_absolute_percentage_error, mean_absolute_error, make_scorer\n",
     "\n",
     "sys.path.append(\"..\")\n",
     "from src import utility\n",
@@ -24,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +151,7 @@
        "[2 rows x 33 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +698,7 @@
        "[8 rows x 24 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -766,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -909,7 +911,7 @@
        "[382 rows x 4 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -920,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1063,7 +1065,7 @@
        "[74 rows x 4 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1074,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1087,7 +1089,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1098,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1180,7 +1182,7 @@
        "freq     269                                                247  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1191,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1212,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1238,7 +1240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1270,7 +1272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1300,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1326,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1357,7 +1359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1372,7 +1374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1399,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1420,7 +1422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1437,7 +1439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1454,7 +1456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1463,7 +1465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1472,7 +1474,7 @@
        "Index([350], dtype='int64')"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1483,7 +1485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1535,7 +1537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1563,6 +1565,119 @@
     "print(\"Before:\", preprocessing.count_outliers(test, numerical_features))\n",
     "test = preprocessing.replace_outliers(test, numerical_features)\n",
     "print(\"After:\", preprocessing.count_outliers(test, numerical_features))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **4. Prophet Model**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "10:11:48 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "10:11:49 - cmdstanpy - INFO - Chain [1] done processing\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<prophet.forecaster.Prophet at 0x209cfbdef10>"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Prepare train data for Prophet\n",
+    "train_prophet = train.reset_index().rename(columns={\"datetime\": \"ds\", \"temp\": \"y\"})\n",
+    "\n",
+    "# Initialize & fit Prophet model\n",
+    "model = Prophet()\n",
+    "model.fit(train_prophet)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create future dataframe\n",
+    "future = model.make_future_dataframe(periods=len(test), freq='D')\n",
+    "# Predict\n",
+    "forecast = model.predict(future)\n",
+    "# Extract predicted values\n",
+    "forecast = forecast[[\"ds\", \"yhat\"]].set_index(\"ds\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                 yhat\n",
+      "ds                   \n",
+      "2023-10-01  13.166908\n",
+      "2023-10-02  13.744182\n",
+      "2023-10-03  13.613235\n",
+      "2023-10-04  13.618371\n",
+      "2023-10-05  13.854675\n",
+      "2023-10-06  13.503563\n",
+      "2023-10-07  12.651439\n",
+      "2023-10-08  12.653565\n",
+      "2023-10-09  13.230839\n",
+      "2023-10-10  13.099892\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(forecast.head(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE: 8.90\n",
+      "R² Score: -7.308\n",
+      "MAPE: 67.30%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Align test & forecast data\n",
+    "test_forecast = forecast.loc[test[\"datetime\"]]\n",
+    "\n",
+    "# Compute Metrics\n",
+    "mse = mean_squared_error(test[\"temp\"], test_forecast.values)\n",
+    "rmse = np.sqrt(mse)\n",
+    "r2 = r2_score(test[\"temp\"], test_forecast)\n",
+    "mape = mean_absolute_percentage_error(test[\"temp\"], test_forecast)\n",
+    "\n",
+    "# Print results\n",
+    "print(f\"RMSE: {rmse:.2f}\")\n",
+    "print(f\"R² Score: {r2:.3f}\")\n",
+    "print(f\"MAPE: {mape:.2%}\")"
    ]
   },
   {
@@ -2763,6 +2878,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The feature importance is computed using ```importance_type=\"gain\"```. This means that the importance of a feature is measured by the total reduction in **Error** (loss) it contributes when used for splits in decision trees.\n",
+    "- Higher importance → More influential feature, as it helps reduce error the most.\n",
+    "\n",
+    "`wind_chill_lag_1` has the highest importance 🡪 This suggests that wind chill from the previous day strongly influences the predicted temperature.\n",
+    "\n",
+    "`tempmax_lag_1` is also highly important 🡪 This means that the maximum temperature of the previous day is crucial for predicting the next day’s temperature.\n",
+    "\n",
+    "Rolling mean features (`temp_rolling_mean_7`) are significant 🡪 This indicates that long-term temperature trends play a key role in the model’s prediction."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# **Modeling**"
    ]
   },
@@ -2777,7 +2906,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`Random Forest`, like most machine learning algorithms, doesn't inherently require `stationary` time series data because it treats observations as independent and identically distributed, not as a time-dependent sequence. "
+    "- In this notebook, we successfully trained and tuned a Random Forest Regressor model to predict temperature data.\n",
+    "- Using RandomizedSearchCV to optimize hyperparameters and achieved a Mean Absolute Error (MAE) of {mae:.2f} °C on the test set.\n",
+    "- The trained model was saved using pickle for future use, and predictions were exported to a CSV file.\n",
+    "\n",
+    "[Notebook](https://www.kaggle.com/code/thnquangvinh/rf-modeling/edit)"
    ]
   },
   {
@@ -2796,11 +2929,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "X_test = pd.read_csv(r\"data\\X_test.csv\")\n",
+    "y_test = pd.read_csv(r\"data\\y_test.csv\")\n",
+    "# Predict using the loaded model\n",
     "X = pd.read_csv(r\"data\\data.csv\")\n",
     "\n",
     "y_pred = model.predict(X_test)\n",
@@ -2834,6 +2969,31 @@
     "plt.legend()\n",
     "plt.grid(True)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAE after tuning: 1.26\n",
+      "R² after tuning: 0.72\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Evaluation\n",
+    "from sklearn.metrics import mean_absolute_error, r2_score\n",
+    "\n",
+    "mae = mean_absolute_error(y_test, y_pred)\n",
+    "print(f\"MAE after tuning: {mae:.2f}\")\n",
+    "\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "print(f\"R² after tuning: {r2:.2f}\")"
    ]
   }
  ],
